--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -83,6 +83,7 @@ PE2.Signal=QUADSPI_BK1_IO2
 SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d1
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 PF3.Signal=FMC_A3
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 PE10.Signal=FMC_D7_DA7
 LTDC.HSync=41
 ProjectManager.HalAssertFull=false
@@ -100,7 +101,6 @@ SH.FMC_A11.ConfNb=1
 PJ4.Signal=LTDC_R5
 NVIC.TimeBaseIP=TIM6
 PJ3.Locked=true
-FREERTOS.FootprintOK=true
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.GraphicsJjApplication_Checked=true
 FMC.WriteRecoveryTime1=3
 SH.FMC_A1.0=FMC_A1,12b-sda1
@@ -139,7 +139,7 @@ ProjectManager.ProjectFileName=STM32F746G_DISCO.ioc
 SH.FMC_A1.ConfNb=1
 SH.FMC_A5.ConfNb=1
 Dma.ADC1.0.Instance=DMA2_Stream0
-FREERTOS.Tasks01=TouchGFXTask,24,4096,TouchGFX_Task,As weak,NULL,Dynamic,NULL,NULL;taskAnalogInput,8,128,StartTaskAnalogInput,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=TouchGFXTask,0,4096,TouchGFX_Task,As weak,NULL,Dynamic,NULL,NULL;taskAnalogInput,-2,128,StartTaskAnalogInput,Default,NULL,Dynamic,NULL,NULL
 ADC1.Rank-0\#ChannelRegularConversion=1
 Mcu.Pin79=PE15
 Mcu.PinsNb=87
@@ -308,14 +308,14 @@ SH.FMC_A8.0=FMC_A8,12b-sda1
 RCC.SAI1Freq_Value=192000000
 RCC.CortexFreq_Value=200000000
 SH.FMC_A2.ConfNb=1
-FREERTOS.BinarySemaphores01=binarySemaphore,Dynamic,NULL
+FREERTOS.BinarySemaphores01=binarySemAnalog,Dynamic,NULL
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746NGHx
 SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d1
 LTDC.HBP=13
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.tgfx_buffering_strategy=Double
 SH.FMC_NBL0.0=FMC_NBL0,Sd2ByteEnable1
-ProjectManager.functionlistsort=11-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,13-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d1
 PA0/WKUP.Signal=ADCx_IN0
 RCC.PLLI2SRCLKFreq_Value=50000000
@@ -325,7 +325,6 @@ SH.FMC_A11.0=FMC_A11,12b-sda1
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.tgfx_location=By Address
 PG15.Signal=FMC_SDNCAS
 ProjectManager.StackSize=0xA00
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 PH3.Mode=SdramChipSelect1_1
 RCC.I2C3Freq_Value=50000000
 PJ6.Locked=true
@@ -363,7 +362,7 @@ Mcu.Pin8=PJ13
 PK2.Mode=RGB888
 Mcu.Pin9=PD0
 RCC.VCOSAIOutputFreq_Value=384000000
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,FootprintOK,configUSE_APPLICATION_TASK_TAG,BinarySemaphores01
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configUSE_APPLICATION_TASK_TAG,BinarySemaphores01
 PJ2.Locked=true
 SH.FMC_A10.0=FMC_A10,12b-sda1
 RCC.AHBFreq_Value=200000000
@@ -442,7 +441,7 @@ Mcu.Pin84=VP_SYS_VS_tim6
 STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1.tgfx_vsync=vsync_ltdc
 Mcu.Pin85=VP_TIM1_VS_no_output1
 Mcu.Pin82=VP_DMA2D_VS_DMA2D
-Mcu.Pin83=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin83=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin86=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.16.1
 PK1.Mode=RGB888
 SH.FMC_A3.ConfNb=1
@@ -479,6 +478,7 @@ PJ11.Mode=RGB888
 PD12.Locked=true
 PA13.Signal=SYS_JTMS-SWDIO
 FREERTOS.configUSE_IDLE_HOOK=1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PJ5.Locked=true
@@ -533,7 +533,6 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 CORTEX_M7.AccessPermission-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_FULL_ACCESS
 CORTEX_M7.IsCacheable-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_ACCESS_CACHEABLE
 Mcu.IP8=LTDC
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 Mcu.IP9=NVIC
 PD14.Signal=FMC_D0_DA0
 Mcu.IP6=FREERTOS
