--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -3,7 +3,8 @@ ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DMAContinuousRequests,EOCSelection,ExternalTrigConv
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DMAContinuousRequests,EOCSelection,ExternalTrigConv,NbrOfConversion
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -48,11 +49,12 @@ FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 FREERTOS.BinarySemaphores01=binarySemAnalog,Dynamic,NULL
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configUSE_APPLICATION_TASK_TAG,BinarySemaphores01
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configUSE_APPLICATION_TASK_TAG,BinarySemaphores01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=TouchGFXTask,0,4096,TouchGFX_Task,As weak,NULL,Dynamic,NULL,NULL;taskAnalogInput,-2,128,StartTaskAnalogInput,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=32768
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_IDLE_HOOK=1
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
@@ -183,8 +185,8 @@ Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F746NGHx
-MxCube.Version=6.2.1
-MxDb.Version=DB.6.0.21
+MxCube.Version=6.3.0
+MxDb.Version=DB.6.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
@@ -276,9 +278,13 @@ PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PH3.Mode=SdramChipSelect1_1
 PH3.Signal=FMC_SDNE0
 PH5.Signal=FMC_SDNWE
+PH7.GPIOParameters=GPIO_Pu
+PH7.GPIO_Pu=GPIO_PULLUP
 PH7.Locked=true
 PH7.Mode=I2C
 PH7.Signal=I2C3_SCL
+PH8.GPIOParameters=GPIO_Pu
+PH8.GPIO_Pu=GPIO_PULLUP
 PH8.Locked=true
 PH8.Mode=I2C
 PH8.Signal=I2C3_SDA
@@ -564,3 +570,4 @@ VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 board=custom
+isbadioc=false
