--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -71,7 +71,7 @@ FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C3.IPParameters=Timing
-I2C3.Timing=0x00101622
+I2C3.Timing=0x00302F47
 KeepUserPlacement=false
 LTDC.ActiveH=272
 LTDC.ActiveW=480
@@ -110,100 +110,101 @@ Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
 Mcu.Pin1=PE2
-Mcu.Pin10=PD0
-Mcu.Pin11=PC11
-Mcu.Pin12=PC10
-Mcu.Pin13=PK7
-Mcu.Pin14=PK6
-Mcu.Pin15=PK5
-Mcu.Pin16=PG12
-Mcu.Pin17=PJ14
-Mcu.Pin18=PD1
-Mcu.Pin19=PC13
+Mcu.Pin10=PJ13
+Mcu.Pin11=PD0
+Mcu.Pin12=PC11
+Mcu.Pin13=PC10
+Mcu.Pin14=PK7
+Mcu.Pin15=PK6
+Mcu.Pin16=PK5
+Mcu.Pin17=PG12
+Mcu.Pin18=PJ14
+Mcu.Pin19=PD1
 Mcu.Pin2=PE1
-Mcu.Pin20=PF0
-Mcu.Pin21=PI10
-Mcu.Pin22=PK4
-Mcu.Pin23=PK3
-Mcu.Pin24=PJ15
-Mcu.Pin25=PD2
-Mcu.Pin26=PF1
-Mcu.Pin27=PI12
-Mcu.Pin28=PI9
-Mcu.Pin29=PK1
+Mcu.Pin20=PC13
+Mcu.Pin21=PF0
+Mcu.Pin22=PI10
+Mcu.Pin23=PK4
+Mcu.Pin24=PK3
+Mcu.Pin25=PJ15
+Mcu.Pin26=PD2
+Mcu.Pin27=PF1
+Mcu.Pin28=PI12
+Mcu.Pin29=PI9
 Mcu.Pin3=PE0
-Mcu.Pin30=PK2
-Mcu.Pin31=PC9
-Mcu.Pin32=PH0/OSC_IN
-Mcu.Pin33=PF2
-Mcu.Pin34=PI15
-Mcu.Pin35=PJ11
-Mcu.Pin36=PK0
-Mcu.Pin37=PC8
-Mcu.Pin38=PH1/OSC_OUT
-Mcu.Pin39=PF3
-Mcu.Pin4=PC12
-Mcu.Pin40=PI14
-Mcu.Pin41=PJ8
-Mcu.Pin42=PJ10
-Mcu.Pin43=PG8
-Mcu.Pin44=PF4
-Mcu.Pin45=PH5
-Mcu.Pin46=PH3
-Mcu.Pin47=PJ7
-Mcu.Pin48=PJ9
-Mcu.Pin49=PF5
-Mcu.Pin5=PA14
-Mcu.Pin50=PJ6
-Mcu.Pin51=PD15
-Mcu.Pin52=PD10
-Mcu.Pin53=PC3
-Mcu.Pin54=PD14
-Mcu.Pin55=PD9
-Mcu.Pin56=PD8
-Mcu.Pin57=PB2
-Mcu.Pin58=PF12
-Mcu.Pin59=PG1
-Mcu.Pin6=PA13
-Mcu.Pin60=PF15
-Mcu.Pin61=PJ4
-Mcu.Pin62=PD12
-Mcu.Pin63=PD13
-Mcu.Pin64=PJ5
-Mcu.Pin65=PA0/WKUP
-Mcu.Pin66=PF13
-Mcu.Pin67=PG0
-Mcu.Pin68=PJ3
-Mcu.Pin69=PE8
-Mcu.Pin7=PB6
-Mcu.Pin70=PD11
-Mcu.Pin71=PG5
-Mcu.Pin72=PG4
-Mcu.Pin73=PH7
-Mcu.Pin74=PF14
-Mcu.Pin75=PJ2
-Mcu.Pin76=PF11
-Mcu.Pin77=PE9
-Mcu.Pin78=PE11
-Mcu.Pin79=PE14
-Mcu.Pin8=PG15
-Mcu.Pin80=PH8
-Mcu.Pin81=PJ0
-Mcu.Pin82=PJ1
-Mcu.Pin83=PE7
-Mcu.Pin84=PE10
-Mcu.Pin85=PE12
-Mcu.Pin86=PE15
-Mcu.Pin87=PE13
-Mcu.Pin88=VP_CRC_VS_CRC
-Mcu.Pin89=VP_DMA2D_VS_DMA2D
-Mcu.Pin9=PJ13
-Mcu.Pin90=VP_FATFS_VS_SDIO
-Mcu.Pin91=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin92=VP_SYS_VS_tim6
-Mcu.Pin93=VP_TIM1_VS_no_output1
-Mcu.Pin94=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.16.1
-Mcu.PinsNb=95
+Mcu.Pin30=PK1
+Mcu.Pin31=PK2
+Mcu.Pin32=PC9
+Mcu.Pin33=PH0/OSC_IN
+Mcu.Pin34=PF2
+Mcu.Pin35=PI15
+Mcu.Pin36=PJ11
+Mcu.Pin37=PK0
+Mcu.Pin38=PC8
+Mcu.Pin39=PH1/OSC_OUT
+Mcu.Pin4=PB3
+Mcu.Pin40=PF3
+Mcu.Pin41=PI14
+Mcu.Pin42=PJ8
+Mcu.Pin43=PJ10
+Mcu.Pin44=PG8
+Mcu.Pin45=PF4
+Mcu.Pin46=PH5
+Mcu.Pin47=PH3
+Mcu.Pin48=PJ7
+Mcu.Pin49=PJ9
+Mcu.Pin5=PC12
+Mcu.Pin50=PF5
+Mcu.Pin51=PJ6
+Mcu.Pin52=PD15
+Mcu.Pin53=PD10
+Mcu.Pin54=PC3
+Mcu.Pin55=PD14
+Mcu.Pin56=PD9
+Mcu.Pin57=PD8
+Mcu.Pin58=PB2
+Mcu.Pin59=PF12
+Mcu.Pin6=PA14
+Mcu.Pin60=PG1
+Mcu.Pin61=PF15
+Mcu.Pin62=PJ4
+Mcu.Pin63=PD12
+Mcu.Pin64=PD13
+Mcu.Pin65=PJ5
+Mcu.Pin66=PA0/WKUP
+Mcu.Pin67=PF13
+Mcu.Pin68=PG0
+Mcu.Pin69=PJ3
+Mcu.Pin7=PA13
+Mcu.Pin70=PE8
+Mcu.Pin71=PD11
+Mcu.Pin72=PG5
+Mcu.Pin73=PG4
+Mcu.Pin74=PH7
+Mcu.Pin75=PF14
+Mcu.Pin76=PJ2
+Mcu.Pin77=PF11
+Mcu.Pin78=PE9
+Mcu.Pin79=PE11
+Mcu.Pin8=PB6
+Mcu.Pin80=PE14
+Mcu.Pin81=PH8
+Mcu.Pin82=PJ0
+Mcu.Pin83=PJ1
+Mcu.Pin84=PE7
+Mcu.Pin85=PE10
+Mcu.Pin86=PE12
+Mcu.Pin87=PE15
+Mcu.Pin88=PE13
+Mcu.Pin89=VP_CRC_VS_CRC
+Mcu.Pin9=PG15
+Mcu.Pin90=VP_DMA2D_VS_DMA2D
+Mcu.Pin91=VP_FATFS_VS_SDIO
+Mcu.Pin92=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin93=VP_SYS_VS_tim6
+Mcu.Pin94=VP_TIM1_VS_no_output1
+Mcu.Pin95=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.16.1
+Mcu.PinsNb=96
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -223,17 +224,19 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0/WKUP.Signal=ADCx_IN0
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PB2.Mode=Single Bank 1
 PB2.Signal=QUADSPI_CLK
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-SWO
 PB6.Mode=Single Bank 1
 PB6.Signal=QUADSPI_BK1_NCS
 PC10.Mode=SD_4_bits_Wide_bus
@@ -408,7 +411,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=true
+ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -431,76 +434,76 @@ ProjectManager.StackSize=0xA00
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-false,15-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,16-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.16.1-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
 QUADSPI.FlashSize=24
 QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,FlashSize,ChipSelectHighTime,SampleShifting
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
-RCC.AHBFreq_Value=25000000
+RCC.AHBFreq_Value=50000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=6250000
-RCC.APB1TimFreq_Value=12500000
+RCC.APB1Freq_Value=12500000
+RCC.APB1TimFreq_Value=25000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=12500000
-RCC.APB2TimFreq_Value=25000000
+RCC.APB2Freq_Value=25000000
+RCC.APB2TimFreq_Value=50000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=25000000
-RCC.EthernetFreq_Value=25000000
-RCC.FCLKCortexFreq_Value=25000000
+RCC.CortexFreq_Value=50000000
+RCC.EthernetFreq_Value=50000000
+RCC.FCLKCortexFreq_Value=50000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=25000000
+RCC.HCLKFreq_Value=50000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=6250000
-RCC.I2C2Freq_Value=6250000
-RCC.I2C3Freq_Value=6250000
-RCC.I2C4Freq_Value=6250000
-RCC.I2SFreq_Value=50000000
+RCC.I2C1Freq_Value=12500000
+RCC.I2C2Freq_Value=12500000
+RCC.I2C3Freq_Value=12500000
+RCC.I2C4Freq_Value=12500000
+RCC.I2SFreq_Value=104166666.66666666
 RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLP,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFToutputFreq_Value=25000000
-RCC.LPTIM1Freq_Value=6250000
+RCC.LCDTFToutputFreq_Value=26041666.666666664
+RCC.LPTIM1Freq_Value=12500000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=25000000
-RCC.PLLCLKFreq_Value=25000000
+RCC.MCO2PinFreq_Value=50000000
+RCC.PLLCLKFreq_Value=50000000
 RCC.PLLI2SN=100
-RCC.PLLI2SPCLKFreq_Value=50000000
-RCC.PLLI2SQCLKFreq_Value=50000000
-RCC.PLLI2SRCLKFreq_Value=50000000
-RCC.PLLI2SRoutputFreq_Value=50000000
-RCC.PLLM=25
-RCC.PLLN=100
+RCC.PLLI2SPCLKFreq_Value=104166666.66666666
+RCC.PLLI2SQCLKFreq_Value=104166666.66666666
+RCC.PLLI2SRCLKFreq_Value=104166666.66666666
+RCC.PLLI2SRoutputFreq_Value=104166666.66666666
+RCC.PLLM=12
+RCC.PLLN=96
 RCC.PLLP=RCC_PLLP_DIV4
-RCC.PLLQCLKFreq_Value=50000000
-RCC.PLLQoutputFreq_Value=50000000
-RCC.PLLSAIN=100
-RCC.PLLSAIPCLKFreq_Value=50000000
-RCC.PLLSAIQCLKFreq_Value=50000000
-RCC.PLLSAIRCLKFreq_Value=50000000
-RCC.PLLSAIoutputFreq_Value=50000000
+RCC.PLLQCLKFreq_Value=100000000
+RCC.PLLQoutputFreq_Value=100000000
+RCC.PLLSAIN=50
+RCC.PLLSAIPCLKFreq_Value=52083333.33333333
+RCC.PLLSAIQCLKFreq_Value=52083333.33333333
+RCC.PLLSAIRCLKFreq_Value=52083333.33333333
+RCC.PLLSAIoutputFreq_Value=52083333.33333333
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RNGFreq_Value=50000000
-RCC.SAI1Freq_Value=50000000
-RCC.SAI2Freq_Value=50000000
-RCC.SDMMCFreq_Value=25000000
-RCC.SPDIFRXFreq_Value=50000000
-RCC.SYSCLKFreq_VALUE=25000000
+RCC.RNGFreq_Value=100000000
+RCC.SAI1Freq_Value=52083333.33333333
+RCC.SAI2Freq_Value=52083333.33333333
+RCC.SDMMCFreq_Value=50000000
+RCC.SPDIFRXFreq_Value=104166666.66666666
+RCC.SYSCLKFreq_VALUE=50000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=6250000
-RCC.UART5Freq_Value=6250000
-RCC.UART7Freq_Value=6250000
-RCC.UART8Freq_Value=6250000
-RCC.USART1Freq_Value=12500000
-RCC.USART2Freq_Value=6250000
-RCC.USART3Freq_Value=6250000
-RCC.USART6Freq_Value=12500000
-RCC.USBFreq_Value=50000000
-RCC.VCOI2SOutputFreq_Value=100000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=100000000
-RCC.VCOSAIOutputFreq_Value=100000000
+RCC.UART4Freq_Value=12500000
+RCC.UART5Freq_Value=12500000
+RCC.UART7Freq_Value=12500000
+RCC.UART8Freq_Value=12500000
+RCC.USART1Freq_Value=25000000
+RCC.USART2Freq_Value=12500000
+RCC.USART3Freq_Value=12500000
+RCC.USART6Freq_Value=25000000
+RCC.USBFreq_Value=100000000
+RCC.VCOI2SOutputFreq_Value=208333333.3333333
+RCC.VCOInputFreq_Value=2083333.3333333333
+RCC.VCOOutputFreq_Value=200000000
+RCC.VCOSAIOutputFreq_Value=104166666.66666666
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.FMC_A0.0=FMC_A0,12b-sda1
